@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -16,24 +16,26 @@
 
 	<name>Tabula</name>
 	<description>
-			Tabula is a tool to support the administration of teaching and learning in academic departments.
-			It's also referred to as My Department.
-		</description>
+		Tabula is a tool to support the administration of teaching and learning in academic departments.
+		It's also referred to as My Department.
+	</description>
 	<url>http://warwick.ac.uk/tabula</url>
 
 	<!-- I N C E P T I O N -->
 	<inceptionYear>2012</inceptionYear>
 
 	<properties>
-		<scala.version>2.10.1</scala.version>
-		<scala.major.version>2.10</scala.major.version>
-		<org.springframework.version>3.2.3.RELEASE</org.springframework.version>
+		<scala.version>2.11.5</scala.version>
+		<scala.major.version>2.11</scala.major.version>
+		<org.springframework.version>4.1.4.RELEASE</org.springframework.version>
+		<org.hibernate.version>4.3.8.Final</org.hibernate.version>
+		<com.fasterxml.jackson.version>2.5.0</com.fasterxml.jackson.version>
 		<org.apache.lucene.version>4.7.0</org.apache.lucene.version>
-		<net.databinder.dispatch.version>0.8.9</net.databinder.dispatch.version>
+		<net.databinder.dispatch.version>0.8.10</net.databinder.dispatch.version>
 		<org.apache.poi.version>3.8</org.apache.poi.version>
-		<org.apache.tiles.version>2.2.2</org.apache.tiles.version>
-		<warwickutils.version>20141208</warwickutils.version>
-		<surefire.version>2.14.1</surefire.version>
+		<org.apache.tiles.version>3.0.5</org.apache.tiles.version>
+		<warwickutils.version>20150128</warwickutils.version>
+		<surefire.version>2.18.1</surefire.version>
 		<recompileMode><!-- incremental --></recompileMode>
 
 		<tabula.basedir>${project.basedir}</tabula.basedir>
@@ -74,6 +76,7 @@
 		<module>modules/groups</module>
 		<module>modules/reports</module>
 		<module>modules/scheduling</module>
+		<module>modules/api</module>
 
 		<!-- Combined EAR -->
 		<module>modules/all</module>
@@ -246,37 +249,37 @@
 								</configuration>
 							</execution>
 						</executions>
-          </plugin>
-          <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-                <version>2.1.11</version>
-                <executions>
-                    <execution>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>revision</goal>
-                         </goals>
-                    </execution>
-                </executions>
+					</plugin>
+					<plugin>
+						<groupId>pl.project13.maven</groupId>
+						<artifactId>git-commit-id-plugin</artifactId>
+						<version>2.1.11</version>
+						<executions>
+							<execution>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>revision</goal>
+								</goals>
+							</execution>
+						</executions>
 
-                <configuration>
-                    <prefix>git</prefix>
-                    <dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
-                    <verbose>false</verbose>
-                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-                    <generateGitPropertiesFile>false</generateGitPropertiesFile>
-                    <generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
-                    <failOnNoGitDirectory>true</failOnNoGitDirectory>
-                    <gitDescribe>
-                        <skip>false</skip>
-                        <always>false</always>
-                        <abbrev>7</abbrev>
-                        <dirty>-devel</dirty>
-                        <forceLongFormat>false</forceLongFormat>
-                    </gitDescribe>
-                </configuration>
-            </plugin>
+						<configuration>
+							<prefix>git</prefix>
+							<dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
+							<verbose>false</verbose>
+							<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+							<generateGitPropertiesFile>false</generateGitPropertiesFile>
+							<generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
+							<failOnNoGitDirectory>true</failOnNoGitDirectory>
+							<gitDescribe>
+								<skip>false</skip>
+								<always>false</always>
+								<abbrev>7</abbrev>
+								<dirty>-devel</dirty>
+								<forceLongFormat>false</forceLongFormat>
+							</gitDescribe>
+						</configuration>
+					</plugin>
 
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -291,14 +294,14 @@
 											<format property="build.time" pattern="yyyy-MM-dd'T'HH:mm:ssZ" />
 										</tstamp>
 										<propertyfile
-											file="${project.build.directory}/${project.build.finalName}/WEB-INF/build.properties"
-											comment="Generated by maven.">
+												file="${project.build.directory}/${project.build.finalName}/WEB-INF/build.properties"
+												comment="Generated by maven.">
 											<entry key="build.time" value="${build.time}" />
 											<entry key="module.name" value="${project.artifactId}" />
 											<entry key="module.context" value="${tabula.module.context}" />
 											<entry key="git.commit" value ="${git.commit.id}"/>
 											<entry key="git.describe" value = "${git.commit.id.describe}"/>
-  										</propertyfile>
+										</propertyfile>
 									</target>
 								</configuration>
 								<goals>
@@ -316,9 +319,9 @@
 											<fileset dir="${project.build.testOutputDirectory}" />
 										</touch>
 										<copy todir="${project.build.testOutputDirectory}/WEB-INF"
-											overwrite="false">
+											  overwrite="false">
 											<fileset
-												dir="${tabula.basedir}/modules/common/src/main/webapp/WEB-INF" />
+													dir="${tabula.basedir}/modules/common/src/main/webapp/WEB-INF" />
 										</copy>
 									</target>
 								</configuration>
@@ -399,12 +402,6 @@
 					<scope>test</scope>
 				</dependency>
 				<dependency>
-					<groupId>org.hsqldb</groupId>
-					<artifactId>hsqldb</artifactId>
-					<version>2.2.9</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
 					<groupId>org.apache.lucene</groupId>
 					<artifactId>lucene-test-framework</artifactId>
 					<version>${org.apache.lucene.version}</version>
@@ -449,9 +446,19 @@
 			</snapshots>
 		</repository>
 		<repository>
-				<id>milestone.repo.spring.io</id>
-				<name>repo.spring.io-milestone</name>
-				<url>https://repo.spring.io/libs-milestone</url>
+			<id>milestone.repo.spring.io</id>
+			<name>repo.spring.io-milestone</name>
+			<url>https://repo.spring.io/libs-milestone</url>
+		</repository>
+		<repository>
+			<id>repository.springsource.milestone</id>
+			<name>SpringSource Milestone Repository</name>
+			<url>http://repo.springsource.org/milestone</url>
+		</repository>
+		<repository>
+			<id>bintray.com.scalaz.releases</id>
+			<name>Scalaz Bintray Repo</name>
+			<url>http://dl.bintray.com/scalaz/releases</url>
 		</repository>
 	</repositories>
 
@@ -477,7 +484,7 @@
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
-				<version>3.1.3</version>
+				<version>3.2.0</version>
 			</plugin>
 
 			<plugin>
@@ -516,7 +523,7 @@
 		<plugins>
 
 			<!-- Scala support in maven -->
-			 <plugin>
+			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
 				<executions>
@@ -543,7 +550,6 @@
 					<jvmArgs>
 						<jvmArg>-Xms256m</jvmArg>
 						<jvmArg>-Xmx2048m</jvmArg>
-						<jvmArg>-XX:MaxPermSize=512m</jvmArg>
 					</jvmArgs>
 					<args>
 						<arg>-deprecation</arg>
@@ -551,8 +557,8 @@
 						<arg>-Xmax-classfile-name</arg>
 						<arg>130</arg>
 					</args>
-          <source>1.6</source>
-          <target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -569,8 +575,8 @@
 					</execution>
 				</executions>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -673,7 +679,7 @@
 				<plugin>
 					<groupId>net.alchim31.maven</groupId>
 					<artifactId>scala-maven-plugin</artifactId>
-					<version>3.1.5</version>
+					<version>3.2.0</version>
 				</plugin>
 
 				<plugin>
@@ -719,9 +725,9 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${surefire.version}</version>
 					<configuration>
-						<argLine>-Xmx2048m -Xms256m -XX:PermSize=128m -XX:MaxPermSize=512m</argLine>
+						<argLine>-Xmx2048m -Xms256m</argLine>
 						<forkCount>0.75C</forkCount>
-			  			<!--<runOrder>random</runOrder>-->
+						<!--<runOrder>random</runOrder>-->
 						<systemPropertyVariables>
 							<!-- Referenced in test tabula.properties data directory,
 								ensuring forks use separate data -->
@@ -781,7 +787,7 @@
 											scala-maven-plugin
 										</artifactId>
 										<versionRange>
-											[3.1.3,)
+											[3.2.0,)
 										</versionRange>
 										<goals>
 											<goal>add-source</goal>
@@ -923,51 +929,51 @@
 	<!-- D E P E N D E N C I E S -->
 	<!-- ====================================================================== -->
 	<dependencies>
-		<!-- "Provided" dependencies are provided by Jboss -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>javax.servlet.jsp-api</artifactId>
 			<version>2.2.1</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.2</version>
-			<scope>provided</scope>
 		</dependency>
 
-		<!-- Define xerces and xmlParserAPIs as provided to avoid them being packaged
-			by a transitive dependency in the war -->
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.2</version>
+		</dependency>
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.9.1</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xmlParserAPIs</artifactId>
 			<version>2.6.2</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
 			<version>1.3.04</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -979,7 +985,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -995,15 +1001,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.scala-tools.testing</groupId>
-			<artifactId>specs_${scala.major.version}</artifactId>
-			<version>1.6.9</version>
+			<groupId>org.specs2</groupId>
+			<artifactId>specs2_${scala.major.version}</artifactId>
+			<version>2.4.15</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_${scala.major.version}</artifactId>
-			<version>2.0.M6-SNAP8</version>
+			<version>2.2.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -1015,7 +1021,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
+			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -1028,7 +1034,7 @@
 		<dependency>
 			<groupId>com.jsuereth</groupId>
 			<artifactId>scala-arm_${scala.major.version}</artifactId>
-			<version>1.3</version>
+			<version>1.4</version>
 		</dependency>
 	</dependencies>
 
@@ -1093,8 +1099,8 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.scala</groupId>
-				<artifactId>spring-scala</artifactId>
-				<version>1.0.0.M2</version>
+				<artifactId>spring-scala_${scala.major.version}</artifactId>
+				<version>1.0.0.RC1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
